# playbook

./: .env.example  .env.template  .gitignore  AGENTS.md  AGENTS_CROSS_VERIFICATION_REPORT_v2.md  AUDIT_REPORT.md  CROSS_VERIFICATION_REPORT.md  DEMO_WALKTHROUGH.md  Development_Plan.md  LICENSE  PITCH_DECK_SCRIPT.md  PITCH_QUICK_REFERENCE.md  README.md  REAL_WORLD_SCENARIO.md  RUN.md  TEST_GUIDE.md  VIDEO_SCRIPT.md  VIDEO_TRANSCRIPTION.md  WINNING_PITCH_SCRIPT.md  config_response.network-response  demo_agents.py  demo_seed.py  doc_content.txt  docker-compose.yml  e2e_errors.json  e2e_test.js  e2e_test_v2.js  e2e_v2_errors.json  fix_fetch.py  login.json  package-lock.json  package.json  page_content.html  railway.json  rigorous_e2e.js  seed_reference_only.py  swarm.py  temp_analytics_check.js  temp_analytics_scroll3.js  temp_screenshot2.js  (+6 more)
backend/: CUsersshamutemp_screenshot.js  Dockerfile  first_id.txt  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0dc37a4543fc_add_agent_status_last_seen_and_health_.py  0ecd27e6d99a_add_agent_id_and_swarm_id_to_incidents.py  9675ebfa3638_initial_schema_20_tables_resolved_.py  b2de966705b7_add_incident_type_to_incidents.py
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/core/: config.py  constants.py  logging.py  security.py
backend/app/judge/: __init__.py  bypass_detector.py  decision.py  engine.py
backend/app/policy/: __init__.py  baseline_loader.py  conflict_detector.py  odp_resolver.py
backend/app/routers/: agents.py  auth.py  compliance.py  dashboard.py  demo.py  forensics.py  gemini.py  health.py  incidents.py  integrations.py  judge.py  lobstertrap.py  playbooks.py  playground.py  swarm.py  (+2 more)
backend/benchmarks/: test_latency.py
backend/scripts/: cleanup_demo_agents.py  populate_gemini_cache.py
backend/tests/: conftest.py
sdk/: README.md  pyproject.toml
sdk/playbook_sdk/: __init__.py  client.py  config.py  exceptions.py  guard.py  heartbeat.py  models.py
sdk/tests/: test_client.py  test_guard.py  test_heartbeat.py  test_integration.py  test_middleware_crewai.py  test_middleware_langchain.py
(+154 files in other folders)
