[project]
name = "playbook-guard"
version = "0.1.0"
description = "PLAYBOOK Python SDK — Runtime safety for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
langchain = ["langchain>=0.2.0"]
crewai = ["crewai>=0.30.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/shamuddin/playbook"
Documentation = "https://github.com/shamuddin/playbook/blob/main/sdk/README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
